@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020090818"
+#define public MagickPackageVersionAddendum ".020090819"
 #define public MagickPackageReleaseDate "unreleased"
