@@ -1094,14 +1094,14 @@ static Image *ReadMETAImage(const ImageInfo *image_info,
             (void) WriteBlobByte(buff,c);
           }
         }
-
+      blob=GetBlobStreamData(buff);
+      length=GetBlobSize(buff);
       (void) LogMagickEvent(CoderEvent,GetMagickModule(),
                             "Store IPTC profile, size %lu bytes",
-                            (unsigned long) GetBlobSize(buff));
-      (void) SetImageProfile(image,"IPTC",GetBlobStreamData(buff),
-                             GetBlobSize(buff));
-      /* MagickFreeMemory(blob); */
+                            (unsigned long) length);
+      (void) SetImageProfile(image,"IPTC",blob,length);
       DetachBlob(buff->blob);
+      MagickFreeMemory(blob);
       DestroyImage(buff);
     }
   if (LocaleNCompare(image_info->magick,"APP1",4) == 0)
@@ -1208,13 +1208,14 @@ static Image *ReadMETAImage(const ImageInfo *image_info,
             }
 #endif
         }
+      blob=GetBlobStreamData(buff);
+      length=GetBlobSize(buff);
       (void) LogMagickEvent(CoderEvent,GetMagickModule(),
                             "Store APP1 profile, size %lu bytes",
-                            (unsigned long) GetBlobSize(buff));
-      (void) SetImageProfile(image,"APP1",GetBlobStreamData(buff),
-                             GetBlobSize(buff));
-      /* MagickFreeMemory(blob); */
+                            (unsigned long) length);
+      (void) SetImageProfile(image,"APP1",blob,length);
       DetachBlob(buff->blob);
+      MagickFreeMemory(blob);
       DestroyImage(buff);
     }
   if ((LocaleCompare(image_info->magick,"ICC") == 0) ||
@@ -1238,13 +1239,14 @@ static Image *ReadMETAImage(const ImageInfo *image_info,
           break;
         (void) WriteBlobByte(buff,c);
       }
+      blob=GetBlobStreamData(buff);
+      length=GetBlobSize(buff);
       (void) LogMagickEvent(CoderEvent,GetMagickModule(),
                             "Store ICM profile, size %lu bytes",
-                            (unsigned long) GetBlobSize(buff));
-      (void) SetImageProfile(image,"ICM",GetBlobStreamData(buff),
-                             GetBlobSize(buff));
-      /* MagickFreeMemory(blob); */
+                            (unsigned long) length);
+      (void) SetImageProfile(image,"ICM",blob,length);
       DetachBlob(buff->blob);
+      MagickFreeMemory(blob);
 
       DestroyImage(buff);
     }
@@ -1287,14 +1289,14 @@ static Image *ReadMETAImage(const ImageInfo *image_info,
       length=GetBlobSize(buff)-12;
       blob[10]=length >> 8;
       blob[11]=length & 0xff;
-
+      blob=GetBlobStreamData(buff);
+      length=GetBlobSize(buff);
       (void) LogMagickEvent(CoderEvent,GetMagickModule(),
                             "Store IPTC profile, size %lu bytes",
-                            (unsigned long) GetBlobSize(buff));
-      (void) SetImageProfile(image,"IPTC",GetBlobStreamData(buff),
-                             GetBlobSize(buff));
-      /* MagickFreeMemory(blob) */
+                            (unsigned long) length);
+      (void) SetImageProfile(image,"IPTC",blob,length);
       DetachBlob(buff->blob);
+      MagickFreeMemory(blob)
       DestroyImage(buff);
     }
   CloseBlob(image);
